# pyd3d12

./: .gitignore  CMakeLists.txt  LICENSE.txt  Readme.md  pyproject.toml  setup.py
.github/workflows/: windows-latest.yaml
assets/: mandrill.dds
common/hlsl/: mlp_utils.hlsli  utils.hlsli
native/: CMakeLists.txt
native/src/: blue_noise.cpp  common.h  d3d12_bindings_0.cpp  imgui_bindings_0.cpp  lib.cpp  pix.cpp  rdoc.cpp
py/: blue_noise.py  compressonator.py  d3d12.py  dds.py  dxc.py  gltf.py  imgui.py  linalg.py  pix.py  rdoc.py  torch_utils.py  utils.py
scripts/: build.bat  clean.bat  fetch.bat  install.bat  rebuild_native.bat  start.bat
tests/: cuda_d3d12_interop_0.py  kaolin_test_0.ipynb  mlp_test.py  namer.py  polyscope_test_0.py  pyvista_test_0.py  simple_rt.py  simple_rt_gltf.py  simple_rt_mlp.py  simple_test_0.py  simple_window_0.py  simple_window_imgui.py  test_agility_sdk.py  test_dds_0.py
tests/blog/: autograd.py  autograd_matrix.py  autograd_numpy.py  autograd_ocl.py  autograd_tensors.py  autograd_vectors.py
tests/config_saver/: example.py  main.py
tests/hlsl/: mlp_test.hlsl  simple_rt_mlp.hlsl
tests/model_visualizer/: database.py  main.py
tests/model_visualizer/static/scripts/: nodes.js
tests/model_visualizer/templates/: index.html
tests/torch/: cat_diffusion.py  cat_diffusion2.py  cat_diffusion3.py  cat_diffusion4.py  cat_diffusion5.py  cat_diffusion6.py  cat_diffusion7.py  cat_diffusion8.py  cat_energy.py  cat_energy_grad.py  cat_vae.py  catar.py  comfyuitest.py  vm.py  wantest.py
tests/torch/car_play/: car_play.py
tests/torch/cuda_experiments/eggroll_gen_cats/: cuda_native_1.py  cuda_native_10.py  cuda_native_11.py  cuda_native_2.py  cuda_native_3.py  cuda_native_4.py  cuda_native_5.py  cuda_native_6.py  cuda_native_7.py  cuda_native_8.py  cuda_native_9.py  torch_1.py
tests/torch/toy_llm/: toy_llm.py  toy_llm_vm.py
